--- a/plot3.html
+++ b/plot3.html
@@ -6,8 +6,6 @@
     <title>EP Score</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="plot.js" defer></script>
-    <script src="plot2.js" defer></script>
     <script src="plot3.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,15 +15,6 @@
     />
   </head>
   <body>
-    <div class="container">
-      <h1>Various graphs and indicators</h1>
-      <h2>Work in progress</h2>
-      <p>
-        TODO : Ajouter légendes, possibilité de passer sa souris au dessus des
-        graphiques pour avoir plus d'informations sur des données, prendre les
-        bonnes couleurs des partis
-      </p>
-      <svg id="map" width="800" height="600"></svg>
-    </div>
+    <div class="container"><svg id="map" width="800" height="600"></svg></div>
   </body>
 </html>
